--- a/Hola.html
+++ b/Hola.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <h1>Bienvenido!!!</h1>
-    <h1>Hola!!!</h1>
+    <h1 style="color blue;">Hola!!!</h1>
     Hola Mundo!!!
 </body>
 
